scrollbar fix for ios

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -86,6 +86,7 @@ select {
 }
 
 
+/*
 body::-webkit-scrollbar {
     width: 1em;
 }
@@ -95,6 +96,27 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: #DB2600;
   outline: 1px solid slategrey;
+}
+*/
+
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    background:$primary; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4); 
 }
 
 
